# marian-rknn

./: .dockerignore  .gitignore  .gitmodules  .pylintrc  Dockerfile  Dockerfile.build  Dockerfile.python  README.md  calibration.txt  docker-compose.yml  preflight.py  requirements.lite.txt  requirements.rknn.txt  requirements.txt
.github/workflows/: build.yml  pylint.yml
calibration/: attention_mask_10.npy  attention_mask_2.npy  attention_mask_3.npy  attention_mask_4.npy  attention_mask_6.npy  attention_mask_7.npy  attention_mask_8.npy  attention_mask_9.npy  input_ids_1.npy  input_ids_10.npy  input_ids_2.npy  input_ids_3.npy  input_ids_4.npy  input_ids_5.npy  input_ids_6.npy  input_ids_7.npy  input_ids_8.npy  input_ids_9.npy
cpp/: CMakeLists.txt  bpe_tools.cc  bpe_tools.h  common.h  easy_timer.h  file_utils.cc  file_utils.h  logger.cc  logger.h  main.cc  marian_rknn.cc  marian_rknn.h  rknn_utils.cc  rknn_utils.h  type_half.h
cpp/src/: benchmark.cc  easy_timer.h  file_utils.cc  file_utils.h  logger.cc  logger.h  main.cc  marian_rknn.cc  marian_rknn.h  rknn_utils.cc  rknn_utils.h  time_utils.h  type_half.h
cpp/tests/: file_utils_test.cc
datasets/: README.md  en-phrases-short.txt  en-phrases.txt
doc/: research.md
research/: sockeye-models.md  translation-server.md
scripts/: benchmark.py  convert.py  counters.py  eval.py  infer.py  preflight.py  preprocess.py  rknn_convert.py  rknn_infer.py
